--- a/app/src/main/res/layout/fragment_tarrakki_pro_benefits.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_pro_benefits.xml
@@ -48,6 +48,22 @@
                 tools:listitem="@layout/row_pro_benefit_item" />
 
             <TextView
+                android:visibility="gone"
+                android:id="@+id/tvMsgPlan"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_25sdp"
+                android:layout_marginEnd="@dimen/_25sdp"
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/choose_plan"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintTop_toBottomOf="@+id/rvProBenefits" />
+
+
+            <TextView
                 android:id="@+id/tvChoosePlan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
