--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
             tools:context=".module.home.HomeFragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:paddingBottom="@dimen/_45sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
