--- a/app/src/main/res/layout/fragment_tarrakki_pro_benefits.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_pro_benefits.xml
@@ -64,6 +64,7 @@
 
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tvChoosePlan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
