--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
             tools:context=".module.home.HomeFragment">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:paddingBottom="@dimen/_45sdp"
+                android:paddingBottom="@dimen/_50sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -780,12 +780,13 @@
                     android:background="@drawable/shape_cart_view"
                     android:elevation="@dimen/space_2"
                     android:orientation="vertical"
-                    android:padding="8dp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/clConsumerLoanInvestment">
 
                     <ImageView
+                        android:layout_marginTop="@dimen/_8sdp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
                         android:id="@+id/ivTarrakiProlbl"
@@ -800,6 +801,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
+                        android:layout_margin="@dimen/_8sdp"
                         android:id="@+id/ivTarrakiPro"
                         android:layout_width="@dimen/_20sdp"
                         android:layout_height="@dimen/_20sdp"
@@ -822,6 +824,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_62sdp"
                         android:padding="@dimen/_8sdp"
+                        android:layout_marginStart="@dimen/_8sdp"
                         android:src="@drawable/ic_premium_customer_support_section"
                         app:layout_constraintEnd_toStartOf="@id/ivTp2"
                         app:layout_constraintHorizontal_weight="3.25"
@@ -834,7 +837,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_8"
                         android:gravity="center"
-                        android:paddingEnd="8dp"
+                        android:paddingEnd="@dimen/_2sdp"
+                        android:paddingStart="@dimen/_2sdp"
+                        android:paddingBottom="@dimen/_8sdp"
                         android:text="@string/premium_support"
                         android:textSize="@dimen/_9ssp"
                         app:layout_constraintEnd_toEndOf="@id/ivTp1"
@@ -860,6 +865,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_8"
                         android:gravity="center"
+                        android:paddingEnd="@dimen/_4sdp"
+                        android:paddingStart="@dimen/_4sdp"
+                        android:paddingBottom="@dimen/_8sdp"
                         android:text="@string/portfolio_construction"
                         android:textSize="@dimen/_9ssp"
                         app:layout_constraintEnd_toEndOf="@id/ivTp2"
@@ -890,6 +898,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_62sdp"
                         android:padding="@dimen/_8sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
                         android:src="@drawable/ic_mutual_funds_recommendations"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_weight="3.25"
@@ -902,7 +911,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_8"
                         android:gravity="center"
-                        android:paddingStart="8dp"
+                        android:paddingBottom="@dimen/_8sdp"
+                        android:paddingStart="@dimen/_2sdp"
+                        android:paddingEnd="@dimen/_2sdp"
                         android:text="@string/mutual_recommend"
                         android:textSize="@dimen/_9ssp"
                         app:layout_constraintEnd_toEndOf="@id/ivTp3"
